testemu: Adopt latest NETEMU features