@@ -86,6 +86,20 @@ dependencies {
     testImplementation "org.spockframework:spock-core:2.0-M4-groovy-3.0"
 }
 
+compileJava {
+    options.fork = true
+
+    for (final javacPackage in ['code', 'util']) {
+
+        /*  Adapted from https://github.com/projectlombok/lombok/issues/2681#issuecomment-805252645
+        */
+        options.forkOptions.jvmArgs += ['--add-opens', "jdk.compiler/com.sun.tools.javac.${javacPackage}=ALL-UNNAMED"
+                as String] // GString not supported as JVM fork argument
+
+        options.compilerArgs += ['--add-exports', "jdk.compiler/com.sun.tools.javac.${javacPackage}=ALL-UNNAMED"]
+    }
+}
+
 test {
     useJUnitPlatform()
     testLogging {
